fix: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,57 @@
-*/config/development
-*/logs/log-*.php
-!*/logs/index.html
-*/cache/*
-!system/cache/*
-!*/cache/index.html
-!*/cache/.htaccess
+.DS_Store
+
+application/cache/*
+!application/cache/index.html
+
+application/logs/*
+!application/logs/index.html
+
+!application/*/.htaccess
+
+/application/config/database.php
+/application/libraries/payment/pasargad/certificate.xml
+/admin/application/config/database.php
+/admin/site_map.xml
+
+composer.lock
 
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
-
-#codeigniter 3
-application/logs/*
-!application/logs/index.html
-!application/logs/.htaccess
 /vendor/
+
+# IDE Files
+#-------------------------
+/nbproject/
+.idea/*
+
+## Sublime Text cache files
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+/tests/tests/
+/tests/results/
+
+/content/article/*
+!/content/article/index.html
+/content/csv_files/*
+!/content/csv_files/index.html
+/content/customer_files/*
+!/content/customer_files/index.html
+/content/file/*
+!/content/file/index.html
+/content/module/*
+!/content/module/index.html
+/content/option_file/*
+!/content/option_file/index.html
+!/content/option_file/.htaccess
+/content/products/*
+!/content/products/index.html
+!/content/products/no_pic.jpg
+!/content/products/thumb
+/content/products/thumb/*
+!/content/products/thumb/index.html
+!/content/products/thumb/no_pic.jpg
